--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
     padding: 0;
-    background-color: #eb1212;
+    background-color: #f0f0f0;
 	font-family: Arial, sans-serif;
     }
 
